@@ -1,3 +1,8 @@
+2003-12-29
+    * Added events sample (in etc)
+    * Ran convert-repo on darcs source code repository
+    
+
 2003-12-12 20:15  kbs
     * Modified drop targets (text and file) to only allow
         nil or false to reject the drop, or true to accept.
